RESOLVED FIXED110239
[New Multicolumn] REGRESSION: RenderMultiColumnSets broken by the RenderRegion -> RenderBlock subclassing
https://bugs.webkit.org/show_bug.cgi?id=110239
Summary [New Multicolumn] REGRESSION: RenderMultiColumnSets broken by the RenderRegio...
Dave Hyatt
Reported 2013-02-19 11:09:57 PST
RenderMultiColumnSets were not patched correctly when RenderRegions became RenderBlocks. This bug is covering fixing the paint method to be more like RenderRegion's.
Attachments
Patch (17.98 KB, patch)
2013-02-19 14:35 PST, Dave Hyatt
simon.fraser: review+
Dave Hyatt
Comment 1 2013-02-19 14:35:21 PST
Simon Fraser (smfr)
Comment 2 2013-02-19 14:41:45 PST
Comment on attachment 189165 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=189165&action=review > Source/WebCore/rendering/RenderFlowThread.cpp:254 > + // layout code that attempts to pixel snap will be incorrect. In general this is a huge problem with > + // subpixel layout (that attempts at snapping are just utterly wrong in the presence of any non-integral Perhaps you could omit this or say it in a more forward-looking way.
Dave Hyatt
Comment 3 2013-02-19 15:25:36 PST
Fixed in r143395.
Note You need to log in before you can comment on or make changes to this bug.